tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__UniversalMacerat-AAAAAAAAAAAAAAAAAAAEjA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1164,
  "prerequisites": [
    1231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "One of the most important machines in HV is the Universal Macerator. It has an additional output slot to get more materials when macerating ores. You want this, really, really, badly. If you get it, you can say goodbye to your Gallium worries!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lUniversal Macerator",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1231
  ],
  "rewards": [],
  "tasks": []
}
