tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__UpgradedRFBatter-AAAAAAAAAAAAAAAAAAAD2w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 987,
  "prerequisites": [
    604,
    990
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Capacitor Banks are upgraded RF batteries which can store the RF power you generate.\n\nBTW, you can also use capacitors to upgrade your EnderIO machines. They'll use more power, but also work faster.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lUpgraded RF Batteries",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    604,
    990
  ],
  "rewards": [],
  "tasks": []
}
