tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__VibrantAlloy-AAAAAAAAAAAAAAAAAAAD3Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 989,
  "prerequisites": [
    81,
    990,
    79
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Vibrant alloy is a high tier EnderIO alloy made out of ender eye, energetic alloy and chrome dust.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lVibrant Alloy",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    81,
    990,
    79
  ],
  "rewards": [],
  "tasks": []
}
