tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__YoureGonnaHateTh-AAAAAAAAAAAAAAAAAAAE0A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1232,
  "prerequisites": [
    1233,
    1231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some machines need emitters and sensors, like the analyzer or the circuit assembler.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lYou're Gonna Hate This 5 and 6 in HV",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1233,
    1231
  ],
  "rewards": [],
  "tasks": []
}
